Fix dark mode for Tokenizer input text
Summary:
Replace hardcoded text color `#333` for tokenizer input text with variable `{$greytext}` which feels close enough.

Refs T15056

Test Plan:
* Go to http://phorge.localhost/settings/panel/display/ and set `Accessibility` to `Dark Mode (Experimental)`
* Go to http://phorge.localhost/maniphest/task/edit/1/, type text in the "Tags" or "Subscribers" field, check if you can read the text you entered

Reviewers: O1 Blessed Committers, mainframe98

Reviewed By: O1 Blessed Committers, mainframe98

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26213

--- a/webroot/rsrc/css/aphront/tokenizer.css
+++ b/webroot/rsrc/css/aphront/tokenizer.css
@@ -34,7 +34,7 @@ body input.jx-tokenizer-input {
   width: 100%;
   box-shadow: none;
   font-size: {$normalfontsize};
-  color: #333;
+  color: {$greytext},
   height: 26px;
   background: transparent;
 }
